<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pc_dl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/pc_dl_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel_title"
            android:textSize="21sp"
            android:textStyle="bold"
            android:letterSpacing="0.04" />

        <ImageView android:id="@+id/pc_dl_texts" android:layout_width="42dp"
            android:layout_height="42dp" android:padding="10dp"
            android:contentDescription="@string/sms_title" />
    </LinearLayout>

    <TextView
        android:id="@+id/pc_dl_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:textSize="13sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/pc_dl_recent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:clipToPadding="false"
        android:stackFromBottom="false"
        android:scrollbarStyle="outsideOverlay" />

    <TextView
        android:id="@+id/pc_dl_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:maxLines="1"
        android:ellipsize="start"
        android:textSize="30sp"
        android:textIsSelectable="true" />

    <LinearLayout
        android:id="@+id/pc_dl_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="24dp"
        android:paddingTop="6dp">

        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1" />
        <ImageView android:id="@+id/pc_dl_call" android:layout_width="70dp"
            android:layout_height="70dp" android:padding="19dp"
            android:contentDescription="@string/tel_call" />
        <FrameLayout android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView android:id="@+id/pc_dl_back" android:layout_width="52dp"
                android:layout_height="52dp" android:padding="14dp"
                android:layout_gravity="center_vertical|left" android:layout_marginLeft="14dp"
                android:contentDescription="@string/tel_backspace" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
